<resources>
    <string name="calendar_week_sunday">日</string>
    <string name="calendar_week_monday">一</string>
    <string name="calendar_week_tuesday">二</string>
    <string name="calendar_week_wednesday">三</string>
    <string name="calendar_week_thursday">四</string>
    <string name="calendar_week_friday">五</string>
    <string name="calendar_week_saturday">六</string>
    <string name="calendar_not_before_today">选择的日期必须大于今天</string>
    <string name="calendar_null">--</string>
    <string name="calendar_today_text">今</string>
    <string name="calendar_select_start">开始</string>
    <string name="calendar_select_end">结束</string>
</resources>
