<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/calendar_week_height"
    android:background="@color/calendar_week_bg"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_week_01"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_sunday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_week_02"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_monday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_week_03"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_tuesday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_week_04"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_wednesday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_week_05"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_thursday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_week_06"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_friday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_week_07"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calendar_week_saturday"
        android:textColor="@color/calendar_text_week"
        android:textSize="@dimen/calendar_week_text_size"
        android:textStyle="bold" />

</LinearLayout>
